Fix align of language name

--- a/src/styles/quasar.sass
+++ b/src/styles/quasar.sass
@@ -41,6 +41,11 @@ body
 .cursor-default
   cursor: default
 
+.text-sm-right
+  text-align: right
+  body.screen--xs &
+    text-align: left
+
 .justify-sm-end
   justify-content: flex-end
   body.screen--xs &
